# Microprocessor-2-Lab

./: .gitignore  README.md
Deadlock/main/: main.c
Elevator/: .gitignore  Doxyfile
Elevator/main/: CMakeLists.txt  main.c
Elevator/main/inc/: accelerometer.h  button.h  led.h  motion_sensor.h  pressure_sensor.h  serial_communication.h  servo.h
Elevator/main/src/: accelerometer.c  button.c  led.c  motion_sensor.c  pressure_sensor.c  serial_communication.c  servo.c
Lab 1/: README.md
Lab 2/: README.md
Lab 3/: README.md
Lab_0/: .gitignore  README.md
Lab_0/Lab0/main/: main.c
Lab_0/Lab_0/main/: main.c
Lab_0/main/: main.c
Lab_1/: README.md  prelab.txt
Lab_1/Lab1/main/: main.c
Lab_1/main/: main.c
Lab_1B/: README.md
Lab_1B/Lab1B/main/: main.c
Lab_2/: README.md
Lab_2/Lab2/main/: main.c
Lab_3/: README.md
Lab_3/Lab3/main/: CMakeLists.txt  main.c
Lab_4/: README.md
Lab_4/Lab4/main/: main.c
Lab_5/: README.md
Lab_5/Lab5/: sdkconfig  sdkconfig.old
Lab_5/Lab5/main/: main.c
Lab_6/: README.md
Lab_6/Lab6/main/: main.c
Lab_7/: README.md  lab7.html
Lab_7/Lab7/main/: main.c
MiniProject1/main/: main.c
MiniProject2/main/: main.c
lab_1/main/: main.c
