idf_component_register(SRCS "src/led.c"
                            "src/pressure_sensor.c"
                            "src/accelerometer.c"
                            "src/servo.c"
                            "src/motion_sensor.c"
                            "src/button.c"
                            "src/serial_communication.c"
                            "main.c"
                        INCLUDE_DIRS ".")